--- a/www/index.html
+++ b/www/index.html
@@ -36,29 +36,25 @@
 
 <!-- Header -->
 	<div data-role="header" class="header">
-	<a href="#panel" class="ui-btn ui-shadow ui-corner-all ui-icon-grid ui-btn-icon-notext"></a>
-			<h3>Go Mobility<br></h3>
+	<a href="#panel" class="ui-btn ui-shadow ui-corner-all ui-icon-bars ui-btn-icon-notext"></a>
+			<img src="images/dessin.png" alt="logo"><h3>Go Mobility<br></h3>
+
 	</div>
 <!-- ##Header## -->
-
 	
 <!-- Content -->
-	<div data-role="main" class="ui-content">
-		<hr class="ligne"><p>L'ardeche éco-respnsable</p>
+	<div data-role="main" class="ui-content container">
+		<hr class="ligne"><p>L'ardeche éco-responsable</p>
 		<div class="ui-grid-a">
-    		<div class="ui-block-a">
-    			<div class="ui-bar ui-bar-a" ><p>JE PROPOSE</p><small>mon parcours</small>
-    			</div>
-				<a href="#pageone" data-transition="slide"><p>PROPOSE</p></a>
+    		<div class="ui-block-a grille">
+    			<a href="#pageone" data-transition="slide"><p>JE PROPOSE</p><small>mon parcours</small></a>
     		</div>
-    		<div class="ui-block-b">
-    			<div class="ui-bar ui-bar-a"><p>JE CHOISIS</p><small>mon parcours</small>
-    			</div>
-    			<a href="#pageone" data-transition="slide"><p>CHOISIS</p></a>
+    		<div class="ui-block-b grille">
+    			<a href="#pageone" data-transition="slide"><p>JE CHOISIS</p><small>mon parcours</small></a>
     		</div>
 		</div>
-		<div class="container">
-			<p>Déja</p><span class="compteur">0.12g co2</span><p>economisés grace à vous !</p>
+		<div class="content">
+			<p>Déja</p><span class="compteur">0.12g co2</span><p>économisés grace à vous !</p>
 		</div>
 	</div>
 <!-- ##Content## -->
@@ -66,7 +62,7 @@
 
 <!-- Footer -->
 	<div id="footer" data-role="footer" class="footer">
-		<img src="images/coupe.png" alt="Coupe">
+		<img src="images/32/coupe.png" alt="Coupe">
 		<p>Participer à notre concours</p>
 	</div>
 <!-- ##Footer## -->
@@ -74,7 +70,10 @@
 
 </div>
 <!-- ##Main## -->
-
+<!-- ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  #### 
+ ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ##
+  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  #
+ ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  #### -->
 
 
 <!-- Main -->
@@ -97,8 +96,8 @@
 
 
 <!-- Header -->
-	<div data-role="header" class="header">
-	<a href="#panel" class="ui-btn ui-shadow ui-corner-all ui-icon-grid ui-btn-icon-notext"></a>
+	<div data-role="header" class="headers">
+	<a href="#panel" class="ui-btn ui-shadow ui-corner-all ui-icon-bars ui-btn-icon-notext"></a>
 			<span class="compteur_header">0.12g co2</span><h3><br></h3>
 
 	</div>
@@ -106,17 +105,25 @@
 
 	
 <!-- Content -->
-	<div data-role="main" class="ui-content">	
+	<div data-role="main" class="ui-content second">	
 
 		<div class="main">
-			<div class="microphone">Micro</div>
+			<div class="microphone"></div>
 			<div class="ui-grid-c">
-    			<div class="ui-block-a"><div class="ui-bar ui-bar-e" style="height:60px"><a href="#pagetwo">Vélo</a></div></div>
-    			<div class="ui-block-b"><div class="ui-bar ui-bar-e" style="height:60px">Pied</div></div>
-    			<div class="ui-block-c"><div class="ui-bar ui-bar-e" style="height:60px">Roller</div></div>
-    			<div class="ui-block-d"><div class="ui-bar ui-bar-e" style="height:60px">Transport</div></div>
+    			<div class="ui-block-a grille">
+    				<a href="#home" data-transition="slide"><img src="images/32/velo.png" alt="velo"></a>
+    			</div>
+    			<div class="ui-block-b grille">
+    				<a href="#home" data-transition="slide"><img src="images/32/marche.png" alt="marche"></a>
+    			</div>
+    			<div class="ui-block-c grille">
+    				<a href="#home" data-transition="slide"><img src="images/32/roller.png" alt="roller"></a>
+    			</div>
+    			<div class="ui-block-d grille">
+    				<a href="#home" data-transition="slide"><img src="images/32/bus.png" alt="bus"></a>
+    			</div>
 			</div>
-			<div class="plan">Plan</div>
+			<div class="plan"></div>
 
 		</div>
 
@@ -128,9 +135,15 @@
 	<div id="footer" data-role="footer" class="footer">
 
 		<div class="ui-grid-b">
-    		<div class="ui-block-a"><div class="ui-bar ui-bar-e" style="height:60px">Lazy</div></div>
-    		<div class="ui-block-b"><div class="ui-bar ui-bar-e" style="height:60px">Photo</div></div>
-    		<div class="ui-block-c"><div class="ui-bar ui-bar-e" style="height:60px">J'ai terminé</div></div>
+    			<div class="ui-block-a grille">
+    				<a href="#pagetwo" data-transition="slide"><img src="images/32/repos.png" alt="repos"></a>
+    			</div>
+    			<div class="ui-block-b grille">
+    				<a href="#pagetwo" data-transition="slide"><img src="images/32/photo.png" alt="photo"></a>
+    			</div>
+    			<div class="ui-block-c grille">
+    				<a href="#pagetwo" data-transition="slide"><img src="images/32/drapeau.png" alt="finish"></a>
+    			</div>
 		</div>
 
 	</div>
@@ -139,6 +152,12 @@
 
 </div>
 <!-- ##Main## -->
+
+<!-- ##Main## -->
+<!-- ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  #### 
+ ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ##
+  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  #
+ ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  #### -->
 
 
 
@@ -165,7 +184,7 @@
 
 
 <!-- Header -->
-	<div data-role="header" class="header">
+	<div data-role="header" class="headers">
 	<a href="#panel" class="ui-btn ui-shadow ui-corner-all ui-icon-grid ui-btn-icon-notext"></a>
 			<span class="compteur_header">0.12g co2</span><h3><br></h3>
 
@@ -176,14 +195,22 @@
 <!-- Content -->
 	<div data-role="main" class="ui-content">	
 
-		<div class="main two">
+		<div class="main groupe">
 			<div class="plan">Plan</div>
 				<h3>BILAN D'EFFORT</h3>	
 				<div class="ui-grid-a">
-				    <div class="ui-block-a"><div class="ui-bar ui-bar-e" style="height:60px">1h 21m 43s</div></div>
-				    <div class="ui-block-b"><div class="ui-bar ui-bar-e" style="height:60px">150 Kcal</div></div>
-				    <div class="ui-block-a"><div class="ui-bar ui-bar-e" style="height:60px">15.7 km</div></div>
-				    <div class="ui-block-b"><div class="ui-bar ui-bar-e" style="height:60px">150gCo2</div></div>
+	    			<div class="ui-block-a grille boko">
+	    				<img src="images/32/montre.png" alt="finish"><p>1h 21m 43s</p>
+	    			</div>
+	    			<div class="ui-block-b grille boko">
+	    				<img src="images/32/balance.png" alt="finish"><p>150 Kcal</p>
+	    			</div>
+	    			<div class="ui-block-a grille boko">
+	    				<img src="images/32/road.png" alt="finish"><p>15.7 km</p>
+	    			</div>
+	    			<div class="ui-block-b grille boko">
+	    				<img src="images/32/co2.png" alt="finish"><p>150gCo2</p>
+	    			</div>
 				</div>
 				<h3>VOTRE PARCOURS EST DE TYPE</h3>				
 			<div class="ui-grid-b">
@@ -208,6 +235,12 @@
 
 </div>
 <!-- ##Main## -->
+<!-- ##Main## -->
+<!-- ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  #### 
+ ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ##
+  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  #
+ ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  ####  #### -->
+
 
 
 
