--- a/www/index.html
+++ b/www/index.html
@@ -25,16 +25,14 @@
 			<img src="images/dessin.png" alt="logo"><a href="#home"><h3>Go Mobility</a></h3>
 
 	</div>
-			<a href="#home"><h6>Home</h6></a>
 				<ul data-role="listview" data-inset="true">
-				    <li><a href="#organise"><img src="images/32/touriste.png" alt="">Touristique</a></li>
+				    <li><a href="#touristique"><img src="images/32/touriste.png" alt="">Touristique</a></li>
 				    <li><a href="#sportif"><img src="images/32/sportif.png" alt="">Sportif</a></li>
 				    <li><a href="#work"><img src="images/32/work.png" alt="">Go to work</a></li>
 				</ul>
 		</div>
 	</div>
 <!-- ##Panel## -->
-
 
 <!-- Header -->
 	<div data-role="header" class="header">
@@ -217,20 +215,6 @@
 					<div class="grid grille-c"><img src="images/32/sportif.png" alt=""></div>
 					<div class="grid grille-c"><img src="images/32/work.png" alt=""></div>
 
-
-
-						<!-- 			
-							<div class="ui-grid-b">
-				    			<div class="ui-block-a grille">
-				    				<a href="#"><img src="images/32/touriste.png" alt="Parcours touristique"></a>
-				    			</div>
-				    			<div class="ui-block-b grille">
-				    				<a href="#"><img src="images/32/sportif.png" alt="Parcours sportif"></a>
-				    			</div>
-				    			<div class="ui-block-c grille">
-				    				<a href="#"><img src="images/32/work.png" alt="Au travail"></a>
-				    			</div>
-							</div> -->
 		</div>
 
 	</div>
